--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@200;400;600;700;800;900&display=swap');
 .home_main
 {
     height: 90vh;
     width: 100%;
     background-image: linear-gradient(90deg, #ffffff , #adafaf);
     /* background-image: url("/src/images/background.jpg"); */
+    font-family: 'Raleway', sans-serif;
 }
 .home_left
 {
@@ -50,3 +53,4 @@
 {
     background-color: rgb(9, 42, 95);
 }
+
